# bobsphog

./: .gitignore  README.md  pyproject.toml
data/: b22-prompts.json
docs/: a2-results.md  a3-results.md  a4-results.md  a5-results.md  a6-results.md  architecture.md  b1-capability-results.md  b1-checkpoint-selection.md  b1-results.md  b1-throughput-results.md  b2-results.md  b21-results.md  b22-corpus.md  b22-results.md  b23-results.md  b24-results.md  experiment-plan.md  glm-b15-results.md  glm-b22-benchmark-results.md
outputs/: b1-capability-strix-full.json  b1-throughput-2070.json  b1-throughput-4090.json  b1-throughput-strix.json  b2-4090-2560.json  b2-4090-warm-ascending.json  b2-4090.json  b21-4090-2048-prefetch.json  b21-4090-2048-retention.json  b21-4090-2560-prompt-union.json  b21-4090-endpoints.json  b22-cuda-baseline-history-08.json  b22-cuda-baseline-language-08.json  b22-cuda-baseline-science-07.json  b22-live-4090-history-08-after-prefill.json  b22-live-4090-history-08.json  b22-live-4090-language-08-after-prefill.json  b22-live-4090-language-08.json  b22-live-4090-science-07-after-prefill.json  b22-live-4090-science-07.json  b22-predictor-results.json  b22-strix-pilot.json  b23-live-4090-history-08-lazy-1024.json  b23-live-4090-history-08-lazy-pin-1024.json  b23-live-4090-history-08-lazy-pin-2520.json  b23-live-4090-language-08-background-1024.json  b23-live-4090-language-08-background.json  b23-live-4090-language-08-lazy-1024.json  b23-live-4090-language-08-lazy-2048.json  b23-live-4090-language-08-lazy-pin-1024.json  b23-policy-results.json  (+36 more)
(+162 files in other folders)
