[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bobsphog"
version = "0.1.0"
description = "Toy demand-paged neural network experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "torch>=2.7",
]

[project.scripts]
bobsphog-a2 = "bobsphog.a2:main"
bobsphog-a3 = "bobsphog.a3:main"
bobsphog-a4 = "bobsphog.a4:main"
bobsphog-smoke = "bobsphog.smoke:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
